<resources>
    <string name="app_name">TrueHome</string>
    <string name="app_logo_name">True Home</string>
    <string name="login_activity_title">Log In</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_repeat_email">Repeat e-mail</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_street">Street</string>
    <string name="hint_street_number">Street number</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Sign up</string>
    <string name="registration_button">Sign up</string>
    <string name="back_text">Back to log in</string>
    <string name="toast_fill_all_fields">Fill all fields</string>
    <string name="field_error_empty_field">This field can\'t be empty</string>
    <string name="field_error_passwords_not_equal">Given passwords must be the same</string>
    <string name="field_error_emails_not_equal">Given e-mails must be the same</string>
    <string name="field_error_login_incorrect_length">Login has to contain at least 4 characters</string>
    <string name="field_error_password_incorrect_symbols">Password has to contain 1 lower and uppercase letter plus a digit </string>
    <string name="field_error_password_incorrect_length">Password must be at least 8 characters long</string>
    <string name="field_error_email_incorrect">Given e-mail is incorrect</string>
    <string name="field_error_zip_code_incorrect">Given zip code is incorrect</string>
    <string name="prompt_registration_successful">Sign up successful</string>
    <string name="lang_polish">Polish</string>
    <string name="lang_english">English</string>
    <string name="language">Language</string>
    <string name="menu_language">Language</string>
    <string name="menu_apartments">Apartments</string>
    <string name="menu_login">Log in</string>
    <string name="menu_account">Account</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="button_add_apartment">Add apartment</string>
    <string name="logout">Log out</string>
    <string name="add_apartment_name">Name</string>
    <string name="add_apartment_city">City</string>
    <string name="add_apartment_street">Street</string>
    <string name="add_apartment_street_number">Number</string>
    <string name="add_apartment_price">Price</string>
    <string name="add_apartment_zip_code">Zip Code</string>
    <string name="add_apartment_description">Description</string>
    <string name="add_apartment_images">Add images</string>
    <string name="add_apartment_back">Back</string>
    <string name="error_no_data">Couldn\'t get data from server\nTap to try again</string>
    <string name="toast_add_image">Add at least one image</string>
    <string name="toast_successfully_logged">Logged In!</string>
    <string name="toast_successfully_registered">Successfully registered!</string>
    <string name="toast_not_logged">Incorrect login and/or password</string>
    <string name="toast_add_apartment">Apartment successfully added</string>
    <string name="toast_add_apartment_failure">Apartment add failed</string>
    <string name="toast_unable_to_log_in">Unable to log in</string>
    <string name="toast_unable_to_get_respond">Unable to get response from server</string>
    <string name="toast_not_deleted">Something went wrong, try again</string>
    <string name="toast_successfully_deleted">Successfully deleted apartment</string>
    <string name="toast_user_info_update_not_successful">Unable to update user data. Try again</string>
    <string name="toast_user_info_update_successful">Successfully changed user info</string>
    <string name="button_show_my_apartments">Show my apartments</string>
    <string name="button_delete_apartment">Delete</string>
    <string name="button_edit_apartment">Edit</string>
    <string name="button_show_user_details">My info</string>
    <string name="button_save_changes">Save changes</string>
    <string name="button_contact">Contact</string>
    <string name="hello_text_view_message">Hello</string>
    <string name="user_info_name">Name</string>
    <string name="user_info_last_name">Last name</string>
    <string name="user_info_email">E-mail</string>
    <string name="user_info_username">Username</string>
    <string name="user_info_age">Age</string>
    <string name="user_info_address">Address</string>
    <string name="user_info_phone_number">Phone number</string>
</resources>
