<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/menu_account"
        android:title="@string/login_activity_title"
        android:icon="@drawable/ic_account" />

    <item android:title="@string/language">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/lang_polish"
                    android:title="@string/lang_polish"
                    android:icon="@drawable/poland_640" />

                <item
                    android:id="@+id/lang_english"
                    android:title="@string/lang_english"
                    android:icon="@drawable/united_kingdom_640" />
            </group>
        </menu>
    </item>

</menu>